Fixed alignment of hover state indicators on main nav

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -71,7 +71,7 @@ a, li, ul, ol {
 
 .main-nav ul li a {
 	position: relative;
-	top: 5px;
+	top: 6px;
 	height: 30px;
 	padding: 10px 20px;
 	/*background-color: blue;*/
